--- a/Frontend/chefs-mate-frontend/src/App.css
+++ b/Frontend/chefs-mate-frontend/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&display=swap');
+
 .App {
   text-align: center;
 }
@@ -22,6 +25,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: "Barlow";
 }
 
 .App-link {
