--- a/Frontend/chefs-mate-frontend/src/login.css
+++ b/Frontend/chefs-mate-frontend/src/login.css
@@ -1,13 +1,14 @@
 button {
     background-color: #070707;
     color: rgb(255, 255, 255);
-    font-size: 20px;
+    font-size: 25px;
+    font-weight: 600;
     padding: 10px 60px;
     border-radius: 5px;
     margin: 10px 10px;
     cursor: pointer;
     border-width: 0;
-    margin-left: 10%;
+    font-family: 'Barlow Condensed';
 }
 
 input{
