Cleaned up login page, and used hard coded credentials

--- a/Frontend/chefs-mate-frontend/src/login.css
+++ b/Frontend/chefs-mate-frontend/src/login.css
@@ -15,12 +15,10 @@ input{
     color: black;
     background-color: rgba(243, 243, 243, 0.74);
     font-size: 25px;
-    padding: 10px 10px;
     border-radius: 5px;
-    margin: 10px 0px;
     cursor: pointer;
     border-width: 1;
-    margin: 5%;
+    margin-bottom: "5%";
 }
 
 
